# ralf

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  eval.py  eval_unanno.py  pyproject.toml
scripts/compare/: compare_original_vs_migrated.py  prepare_migrated_job_dir.py  prepare_migrated_training_logs.py  run_compare.sh
scripts/run_job/: end_to_end.sh  eval_inference.sh  eval_inference_unanno.sh  visualize_retrieval.sh
src/ralf/: __init__.py
src/ralf/compare/: __init__.py  compare_outputs.py  job_dir.py  training_logs.py
src/ralf/hfds_builder/: dump_dataset.py  inpainting.py  saliency_detection.py
src/ralf/preprocess/: build_retrieval_indexes.py  build_retrieval_indexes_LPIPS.py  build_retrieval_indexes_cross_dataset.py  precompute_relationship.py  rerank_indexes.py  save_clustering_coordinates.py
src/ralf/train/: data.py  global_variables.py  inference.py  inference_single_data.py  inference_unanno.py  train.py
src/ralf/transformers/: __init__.py  modeling_utils.py
tests/: conftest.py  pytest.ini
tests/compare/: test_compare_outputs.py  test_job_dir.py  test_training_logs.py
tests/hf/: test_e2e_cache.py  test_tokenizer_icvt.py  test_tokenizer_ralf.py  test_transformers_misc.py  test_wrapper_autoreg.py  test_wrapper_other_models.py
tests/hfds_builder/: __init__.py  test_dump_dataset.py  test_helpers.py  test_inpainting.py  test_inpainting_model.py  test_saliency_detection.py  test_saliency_detection_extra.py
tests/preprocess/: test_build_retrieval_indexes.py
tests/train/: __init__.py  test_data.py
tests/train/config/: test_configs.py
tests/train/fid/: test_fid_model.py  test_fid_train_helpers.py  test_fid_train_main.py
tests/train/helpers/: __init__.py  test_bucketizer.py  test_bucketizer_realdata.py  test_distributed_wrapper.py  test_export_scores.py  test_hfds_instance_wise_transforms.py  test_io.py  test_layout_tokenizer.py  test_metric.py  test_metric_extra.py  test_metric_gpu.py  (+7 more)
(+160 files in other folders)
